# shelfline

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: publish-testpypi.yml  publish.yml
docs/: release.md
docs/assets/screenshots/: README.md
docs/superpowers/plans/: 2026-05-30-catalog-first-mvp.md  2026-05-31-mvp-2.md  2026-06-01-0-2-reading-experience.md  2026-06-02-catalog-inline-details.md  2026-06-03-cover-renderer-preferences.md
docs/superpowers/specs/: 2026-05-30-catalog-first-mvp-design.md  2026-05-31-mvp-2-design.md  2026-06-01-0-2-reading-experience-design.md  2026-06-02-catalog-inline-details-design.md  2026-06-03-cover-renderer-preferences-design.md
src/epub_tui/: __main__.py  app.py  config.py  credentials.py  downloads.py  library.py  reader.py  services.py
src/epub_tui/catalog/: __init__.py  client.py  models.py  parser.py
src/epub_tui/tui/: __init__.py  app.tcss  layout.py  reader.py  screens.py  theme.py  widgets.py
src/shelfline/: __main__.py  app.py  config.py  covers.py  credentials.py  downloads.py  library.py  reader.py  services.py
src/shelfline/catalog/: __init__.py  client.py  parser.py
src/shelfline/tui/: __init__.py  app.tcss  layout.py  reader.py  screens.py  theme.py  widgets.py
tests/: test_catalog_client.py  test_catalog_parser.py  test_cli.py  test_config.py  test_covers.py  test_credentials.py  test_cross_platform.py  test_downloads.py  test_library.py  test_library_search.py  test_package.py  test_reader.py  test_reader_screen.py  test_reading_progress.py  test_services.py  test_tui_flows.py  test_tui_shell.py  test_tui_smoke.py  test_tui_theme.py
tests/fixtures/opds/: acquisition.xml  invalid.xml  navigation.xml
