[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shelfline"
version = "0.1.0"
description = "Terminal OPDS catalog browser and book downloader"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ebooklib>=0.18",
  "feedparser>=6.0.11",
  "httpx>=0.27",
  "keyring>=25.0",
  "rich>=13.7",
  "textual>=0.80",
  "textual-image>=0.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
]

[project.scripts]
shelfline = "shelfline.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shelfline = ["tui/*.tcss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
