[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shelfline"
version = "0.1.0"
description = "Terminal OPDS catalog browser and book downloader"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "nikhilsahoo" },
]
license = "MIT"
keywords = ["opds", "epub", "tui", "textual", "calibre-web", "ebook", "terminal"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: Terminals",
  "Topic :: Utilities",
]
dependencies = [
  "ebooklib>=0.18",
  "feedparser>=6.0.11",
  "httpx>=0.27",
  "keyring>=25.0",
  "rich>=13.7",
  "textual>=0.80",
  "textual-image>=0.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
]

[project.scripts]
shelfline = "shelfline.__main__:main"

[project.urls]
Homepage = "https://github.com/nikhilsahoo/shelfline"
Repository = "https://github.com/nikhilsahoo/shelfline"
Issues = "https://github.com/nikhilsahoo/shelfline/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shelfline = ["tui/*.tcss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
